// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/multiple-labeled-controls.md inline validation: correct 1`] = `Array []`;

exports[`docs/rules/multiple-labeled-controls.md inline validation: incorrect-both 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "<label> is associated with multiple controls",
        "offset": 1,
        "ruleId": "multiple-labeled-controls",
        "ruleUrl": "https://html-validate.org/rules/multiple-labeled-controls.html",
        "selector": "label",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<label for=\\"bar\\">
  <input type=\\"text\\" id=\\"foo\\">
</label>
<input type=\\"text\\" id=\\"bar\\">",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/multiple-labeled-controls.md inline validation: incorrect-multiple 1`] = `
Array [
  Object {
    "errorCount": 1,
    "filePath": "inline",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "<label> is associated with multiple controls",
        "offset": 1,
        "ruleId": "multiple-labeled-controls",
        "ruleUrl": "https://html-validate.org/rules/multiple-labeled-controls.html",
        "selector": "label",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<label>
  <input type=\\"text\\">
  <input type=\\"text\\">
</label>",
    "warningCount": 0,
  },
]
`;
